--- a/src/stock_agent/templates/dashboard.html
+++ b/src/stock_agent/templates/dashboard.html
@@ -211,6 +211,9 @@
             </div>
         </div>
 
+        <!-- HTMX Library -->
+        <script src="https://unpkg.com/htmx.org@2.0.7"></script>
+        
         <script src="/static/js/auth-utils.js"></script>
         <script>
             let refreshInterval;
