--- a/src/stock_agent/templates/login.html
+++ b/src/stock_agent/templates/login.html
@@ -155,6 +155,9 @@
                 >
             </div>
 
+            <!-- HTMX Library -->
+            <script src="https://unpkg.com/htmx.org@2.0.7"></script>
+            
             <script
                 type="module"
                 src="/static/js/htmx-firebase-auth.js"
