--- a/src/stock_agent/templates/stocks.html
+++ b/src/stock_agent/templates/stocks.html
@@ -230,6 +230,9 @@
         </div>
     </div>
 
+    <!-- HTMX Library -->
+    <script src="https://unpkg.com/htmx.org@2.0.7"></script>
+    
     <script>
         // HTMX handles all the functionality now
             const query = document.getElementById('searchInput').value.trim();
